test: share offering scenario and login helpers across ITs